--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rusties"
+name = "rpc_example_rs"
 version = "0.1.0"
-authors = ["amira <amirault.quentin@gmail.com>"]
+authors = ["amrltqt <amirault.quentin@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
